# ChangeLog for x11-base/nouveau-drm
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-base/nouveau-drm/ChangeLog,v 1.3 2010/02/18 22:08:13 chithanh Exp $

  18 Feb 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  -nouveau-drm-20100212.ebuild:
  remove old

*nouveau-drm-20100216 (17 Feb 2010)

  17 Feb 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +nouveau-drm-20100216.ebuild:
  new snapshot

*nouveau-drm-20100212 (15 Feb 2010)

  15 Feb 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +nouveau-drm-20100212.ebuild, +files/nouveau-drm-20100212-Makefile,
  +metadata.xml:
  Initial import for bug #253705
