@@ -1,5 +1,7 @@
 AUX nouveau-drm-20100212-Makefile 2723 RMD160 468ff0dfb87ccef121e92380afb83041942719d6 SHA1 6fd23ee7d0bb40d70d6445959134919ac5d0dcba SHA256 eaab05b9e70c8557950a688027ba2708525bf97d01a9466c8da3778d8d07c2ef
 DIST nouveau-drm-20100216.tar.gz 1373694 RMD160 dd0decdbf19d5a17da5dd9436997e99fd7d910d8 SHA1 a908831c1102c96d6bc1eff28c9cac91b6808b96 SHA256 339d3fdd1cf12159f73ba37bb94e1b07010c5115cba9dd5cdc27f57cc6affdfc
+DIST nouveau-drm-20100221.tar.gz 1373710 RMD160 a29ba3b1eaa584ce56ce01f9ce99147bec505894 SHA1 e12cda385ffa299e482ce828700b9f550466c20f SHA256 6ad545b8d54c69c09c77cc853e282bad5527b231a7ce1db2ba26b2263fd4fc92
 EBUILD nouveau-drm-20100216.ebuild 1543 RMD160 4b62739273089cc1656b41adc5659d5d21563485 SHA1 ba778b58c95ee322bb13fee70f0dfaaf36667094 SHA256 f1d8189f952317c35280291e2171f86bec32acfab13151f306b717c30fbf91ec
-MISC ChangeLog 711 RMD160 d1a9a86116c020fa4e1f1dfaf7e83a33d99e8c30 SHA1 a4b2f044d0bde6544c6e4fbd375c6e2705d8ec07 SHA256 7af894c150919a83d99f2a099ce7d88d6c6435ca413a5aef725359c7afb3bd1d
+EBUILD nouveau-drm-20100221.ebuild 1543 RMD160 d7a71126a0bfce8c9c0566fef71ddf88302f2c61 SHA1 6ed025ea7382c1d8009c276aa24928c56c932654 SHA256 db3d6381d2f5055dcb4a991a23bfc5129856769d30124a9d09b0dec1bf8fa865
+MISC ChangeLog 865 RMD160 555292fd70581a52e8a73ac8c9168f8568f803de SHA1 ade338d72dde8f068eedcb0e034521a4eba34641 SHA256 a4130c9c9d7d68899ecd67ae6b199b182c35d0c9b4a7eff4d01e21b4e9707181
 MISC metadata.xml 265 RMD160 24a368e280b83393abb1cda7b15e7888e1570a04 SHA1 b60c32aece47cc1c4febe46e54786494a3b913bf SHA256 1240cc1d6dda0bc1a42ca2bffe70aa6a1d34f85f28112615ceb327f58a594a16
