@@ -1,6 +1,12 @@
 # ChangeLog for x11-base/nouveau-drm
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-base/nouveau-drm/ChangeLog,v 1.3 2010/02/18 22:08:13 chithanh Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-base/nouveau-drm/ChangeLog,v 1.4 2010/02/21 22:32:59 chithanh Exp $
+
+*nouveau-drm-20100221 (21 Feb 2010)
+
+  21 Feb 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
+  +nouveau-drm-20100221.ebuild:
+  new snapshot
 
   18 Feb 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
   -nouveau-drm-20100212.ebuild:
